--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
   margin: 65px;
   padding: 5px 5px 5px 5px;
 }
+img {
+  border: 2px solid black;
+  border-radius: 25px;
+}
 h1 {
   font-weight: bolder;
   text-decoration: underline;
