--- a/docs/capstone homework/style.css
+++ b/docs/capstone homework/style.css
@@ -6,10 +6,29 @@ body {
   /* background-attachment: fixed;
   background-color: ; */
   /* background-color: inherit; */
-  /* background-attachment: initial; */
+  background-attachment: initial;
   margin: 65px;
   padding: 5px 5px 5px 5px;
 }
+#headContainer {
+  font-size: xx-large;
+  font-weight: 900;
+  text-align: left;
+  background-color: rgb(83, 64, 64);
+  justify-content: space-between;
+  color: red;
+}
+@media (min-width: 800px) {
+  nav > .fa-bars {
+    display: none;
+  }
+}
+@media (max-width: 800px) {
+  .hidden--mobile {
+    display: none;
+  }
+}
+
 img {
   border: 2px solid black;
   border-radius: 25px;
@@ -38,21 +57,35 @@ h2 {
 }
 .grid-container1 {
   display:grid;
-  grid-template-columns: repeat(2, 2fr);
+  grid-template-columns: 1fr 1fr;
   grid-gap: 10px;
+  justify-content: space-around;
+}
+.grid-item1 {
+  background-color:bisque;
+  border: 1px solid black;
+
+}
+.grid-item2 {
+  grid-column: 2;
+  grid-row:1;
+  background-color:bisque;
+  border: 1px solid black;
 }
 footer {
   text-align:left;
   border-style: double;
-  font-weight: 700;
+  font-weight:400
 }
 .videos {
   text-align: center;
   border-style:solid;
 }
-.grid-container2 {
-  display:grid;
-  grid-template-columns: auto auto;
-  grid-gap: 10px;
+.flex-container2 {
+  display:inline-flex;
+  flex-direction: row;
+  /* grid-auto-columns: repeat(2, 2fr); */
+  /* grid-gap: 10px; */
+  border: 3px solid black;
 }
 
