--- a/style.css
+++ b/style.css
@@ -1,26 +1,39 @@
-/* body {
-  background-image:"/assets/karate.jpg";
-  background-attachment: initial;
-  margin: 65px;
-  padding: 15px 15px 15px 15px;
-} */
 
 body {
-  background-image: url("assets/karate.jpg");
-  background-position:inherit;
-  background-size: contain;
-  background-repeat: repeat;
-  background-attachment:fixed;
+  background-color: cadetblue;
+  background-position: 100%;
 }
-
 header {
   background-color: blue;
-  color:rgb(237, 11, 11);
-
+  color: red;
+  width: 100%;
+  align-content: center;
 }
+header img {
+  display:inline-block;
+  align-items:end;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  border: 2px solid black;
+  border-radius: 10px;
+}
+
+#headContainer {
+  display: inline-flex;
+  font-size: xx-large;
+  font-weight: 800;
+  text-align: center;
+  justify-content: space-around;
+  height: 30vh;
+  width: 100%;
+  margin-left: -10px;
+  margin-right: -10px;
+}
+
 nav {
   display: flex;
-  align-items: left;
+  align-items:end;
   flex-direction: column;
   justify-content: space-around;
 }
@@ -36,44 +49,63 @@ nav > ul > li {
     display: none;
   }
 }
+
 @media (max-width: 800px) {
   .hidden--mobile {
     display: none;
   }
 }
-#headContainer {
-  display:inline-flex
-  font-size:contents;
-  font-weight: 900;
-  text-align: center;
-  justify-content:space-around;
-  color: rgb(206, 14, 14);
+
+/* form.flex-item2 {
+  display: table;
+} */
+div.flex-item2 {
+  display: table-row;
 }
-img {
-  border: 2px solid black;
-  border-radius: 20px;
+label,
+input {
+  display: table-cell;
+  margin-bottom: 10px;
 }
-.grid-container3 {
-  display:grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 10px;
+/* label {
+  padding-right: 10px;
+} */
+
+.flex-item2 {
+  width: 25em;
+  border: 1px solid #333;
+  box-shadow: 8px 8px 5px #444;
+  padding: 8px 12px;
+  background-image: linear-gradient(180deg, #fff, #ddd 40%, #ccc);
 }
-.grid-item3 {
-  grid-column: 1
-  grid-row:1;
-  width: 10%;
-  height: auto;
-  margin-right: 1rem;
+.flex-item2 {
+  display:flex;
+  align-items: center;
+  /* text-align: center; */
+  justify-content:center;
+  /* height: 8em; */
 }
-.grid-item4 {
-  grid-column: 2;
-  grid-row:1;
+div.flex-container1 {
+  display: table-row;
+
+}
+.flex-container1 {
+  object-position: right center;
+}
+
+/* .flex-container1 {
+  display:flex;
+  align-items: center;
+  justify-content:right;
+} */
+/* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
 
 h1 {
   font-weight: bolder;
   text-decoration: underline;
   text-align: center;
 }
+
 p {
   font-family: Arial, Helvetica, sans-serif;
   font-size: larger;
@@ -92,23 +124,7 @@ h2 {
   text-decoration: underline;
   text-align: center;
 }
-.grid-container1 {
-  display:grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 10px;
-  justify-content: space-around;
-}
-.grid-item1 {
-  background-color:bisque;
-  border: 1px solid black;
 
-}
-.grid-item2 {
-  grid-column: 2;
-  grid-row:1;
-  background-color:bisque;
-  border: 1px solid black;
-}
 footer {
   text-align:left;
   border-style: double;
@@ -118,29 +134,15 @@ footer {
   text-align: center;
   border-style:solid;
 }
-.flex-container2 {
-  display:inline-flex;
-  flex-direction: row;
-  /* grid-auto-columns: repeat(2, 2fr); */
-  /* grid-gap: 10px; */
-  border: 3px solid black;
-}
+/*
 .senseiWork {
   display: flex;
-  flex-direction: column;
-  order: 4;
-}
-.senseiWork > img {
+  flex-direction: row;
+  width: 25%
+} */
+/* .senseiWork > img {
   display:flex;
   flex-direction: column;
-  align-items:left;
+  align-items:center;
   order: -1;
-  /* float: left; */
-  width: 40%;
-  height:max-content;
-  margin-right: 1rem;
-}
-.flex-item2 {
-  text-align: center;
-  align-items: center;
 }
