--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 
 body {
   background-color: cadetblue;
-  background-position: 100%;
+  background-position:100%;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 header {
   background-color: blue;
@@ -33,7 +35,8 @@ header img {
 
 nav {
   display: flex;
-  align-items:end;
+  align-items:center;
+  align-content: center;
   flex-direction: column;
   justify-content: space-around;
 }
@@ -43,6 +46,7 @@ nav > ul > li {
   border-radius: 20px;
   border: 2px solid;
   padding: 0.5rem 0.5rem;
+  background-image: linear-gradient(180deg, #fff, #ddd 40%, #ccc);
 }
 @media (min-width: 800px) {
   nav > .fa-bars {
@@ -56,20 +60,9 @@ nav > ul > li {
   }
 }
 
-/* form.flex-item2 {
-  display: table;
-} */
 div.flex-item2 {
   display: table-row;
 }
-label,
-input {
-  display: table-cell;
-  margin-bottom: 10px;
-}
-/* label {
-  padding-right: 10px;
-} */
 
 .flex-item2 {
   width: 25em;
@@ -81,23 +74,112 @@ input {
 .flex-item2 {
   display:flex;
   align-items: center;
-  /* text-align: center; */
   justify-content:center;
-  /* height: 8em; */
 }
-div.flex-container1 {
-  display: table-row;
-
-}
-.flex-container1 {
-  object-position: right center;
-}
-
-/* .flex-container1 {
+.contactDesign {
+  columns: 2 auto;
   display:flex;
+  flex-direction: column;
+  align-content: center;
   align-items: center;
-  justify-content:right;
-} */
+  /* justify-content:end; */
+}
+
+.sensei-student {
+  display: table;
+}
+.senseiWork  {
+    columns: 2 auto;
+    /* display:flex; */
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    /* justify-content:end; */
+  }
+
+.sensei-student {
+width: 25em;
+border: 1px solid #333;
+box-shadow: 8px 8px 5px #444;
+padding: 8px 12px;
+background-image: linear-gradient(180deg, #fff, #ddd 40%, #ccc);
+}
+.sensei-student {
+  columns: 2 auto;
+  /* display:flex; */
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
+  /* justify-content:end; */
+}
+
+.messageFromStudent {
+width: 25em;
+border: 1px solid #333;
+box-shadow: 8px 8px 5px #444;
+padding: 8px 12px;
+background-image: linear-gradient(180deg, #fff, #ddd 40%, #ccc);
+}
+.messageFromStudent {
+  display: flex;
+  background-color: var(--light-tone);
+    border: 1px solid var(--dark-blue);
+    border-radius: 4px 0 4px 0;
+    color: #3B3C3E;
+    font-size: 12px;
+    font-weight: bold;
+    left: 1px;
+    padding: 10px 7px 5px;
+
+    width: 800px;
+    max-height: 800px;
+    overflow:scroll;
+    overflow-y:scroll;
+}
+
+.messageFromStudent {
+  display:flex;
+  justify-content: flex-end;
+}
+.studentinfo1 {
+  columns: 2 auto;
+  /* display:flex; */
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
+  /* justify-content:end; */
+}
+.training-log {
+  display:flex;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
+  justify-content:end;
+}
+.trainingComplete {
+  display:flex;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
+  justify-content:space-between;
+  overflow:scroll;
+  overflow-y:scroll;
+}
+.trainingComplete {
+  width: 50em;
+  height: 10em;
+  border: 1px solid #333;
+  box-shadow: 8px 8px 5px #444;
+  padding: 8px 12px;
+  background-image: linear-gradient(180deg, #fff, #ddd 40%, #ccc);
+}
+
+img {
+  width:20em;
+  height: 20em;
+  border-radius: 7em;
+}
+
 /* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
 
 h1 {
@@ -110,7 +192,7 @@ p {
   font-family: Arial, Helvetica, sans-serif;
   font-size: larger;
   font-weight: 700;
-  text-align: center;
+  /* text-align: center; */
 }
 li {
   font-family: Arial, Helvetica, sans-serif;
@@ -122,7 +204,7 @@ h2 {
   font-size: x-large;
   font-weight:900;
   text-decoration: underline;
-  text-align: center;
+  /* text-align: center; */
 }
 
 footer {
@@ -133,16 +215,4 @@ footer {
 .videos {
   text-align: center;
   border-style:solid;
-}
-/*
-.senseiWork {
-  display: flex;
-  flex-direction: row;
-  width: 25%
-} */
-/* .senseiWork > img {
-  display:flex;
-  flex-direction: column;
-  align-items:center;
-  order: -1;
 }
